--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                     <strong>通知A：</strong>因滥用，新增密码验证
                 </div>
                 <div class="announcement-item" id="announcement2">
-                    <strong>通知B：</strong>支持：刷机、解锁、Root、Twrp、IMEI等
+                    <strong>通知B：</strong>唯一可用；2021年维护至今
                 </div>
                 <div class="announcement-item" id="announcement3">
-                    <strong>通知C：</strong>唯一可用；2021年维护至今
+                    <strong>通知C：</strong>支持：刷机、解锁、Root、Twrp、IMEI等
                 </div>
             </div>
         </section>
@@ -166,11 +166,11 @@
                 </a>
                 <a href="https://www.kdocs.cn/l/cmlNpbzA08FB" target="_blank" class="btn btn-primary" id="getPassword"
                     aria-label="密码渠道">
-                    <i class="fa fa-key"></i> 免费·获取
+                    <i class="fa fa-unlock"></i> 免费·获取
                 </a>
                 <a href="https://pay.ldxp.cn/shop/EMSDA9S1/olon3p" target="_blank" class="btn btn-primary" id="getPassword"
                     aria-label="密码渠道">
-                    <i class="fa fa-unlock "></i> 自购·获取
+                    <i class="fa  fa-key"></i> 自购·获取
                 </a>
                 <!-- <a href="javascript:;" class="btn btn-secondary" id="verifyOnline" aria-label="在线验证">
                     <i class="fa fa-check-circle"></i> 在线验证
@@ -214,7 +214,10 @@
             <div class="divider"></div>
 
             <div class="help-text">
-    <strong>工微（仅捐赠者）：</strong>wander-wechat
+    <strong>工微（优先捐赠者）：</strong>wander-wechat
+</div>
+<div class="help-text">
+    远程协助：成功率100%；提供：不限速下载、刷机/解锁（可保资料）、ROOT/TWRP、救砖等支持
 </div>
 
                 <a href="https://www.360os.top/src/donation/" target="_blank" class="btn btn-secondary"
@@ -236,6 +239,7 @@
     <footer>
         <div class="container">
             <p>本工具仅供学习，请下载后24h删除</p>
+            <p>2021年~至今（稳定运行）</p>
             <p>现在时间: <span id="currentTime">--:--</span></p>
         </div>
     </footer>
@@ -273,10 +277,11 @@
     <div id="infoModal" class="modal">
         <div class="modal-content">
             <span class="close" id="closeInfoModal">&times;</span>
+            <p style="text-align: center; font-weight: bold;">21年~至今（稳定运行）</p>
             <h3>工具</h3>
             <div class="modal-body">
-                <p>1. 请您合理使用，不要随意滥用</p>
-                <p>2. 如您已在官网下载，可忽视此该下载</p>
+                <p>1. 合理使用，不滥用</p>
+                <p>2. 已在官网下载，可忽视</p>
                 <p>3. 请详阅，相关文本或附件，对您很有帮助</p>
                 <p>4. 请尽量在，正版windows操作系统上使用</p>
             </div>
@@ -287,7 +292,7 @@
             </div>
              <h3>密码（多种渠道）</h3>
              <div class="modal-body">
-                <p>1. 免费：免费任务，完成获取（多种形式，可联系）</p>
+                <p>1. 免费：免费任务，完后获取（多种形式，可联系）</p>
                 <p>2. 发卡：自购后，获取</p>
                 <p>3. 捐赠：捐赠后，获取</p>
                 <p>4. 其它：公众号、下载的资源等</p>
@@ -305,7 +310,7 @@
             <span class="close" id="closeServiceModal">&times;</span>
             <div class="modal-body" style="text-align: center;">
                 <img src="pic/wx-code.png" alt="二维码" style="max-width: 180px; margin: 10px auto;">
-                <p style="margin-top: 15px; font-weight: bold; color: red;">付费咨询 人机拒扰(加了白加)</p>
+                <p style="margin-top: 15px; font-weight: bold; color: red;">仅捐赠者 人机拒扰(加了白加)</p>
                 <p style="font-size: 13px; font-weight: bold; color: rgb(80, 80, 80);">注：简述事宜；无意义，认知差异大的人群，孰不回读</p>
             </div>
         </div>
