--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
             <div class="qr-center">
                 <div class="qr-container">
                     <img src="pic/fk.png" alt="在线密钥" class="qr-image" id="qrImage">
-                    <button id="changeCodeBtn">换码</button>
+                    <button id="changeCodeBtn">微码</button>
                 </div>
             </div>
 
             <div class="button-center">
-                 <a href="https://sim.360os.top/" target="_blank" class="btn btn-primary" id="getPassword"
+                <a href="https://sim.360os.top/" target="_blank" class="btn btn-primary" id="getPassword"
                     aria-label="密码渠道">
                     <i class="fa fa-bolt "></i> 免费·获取
                 </a>
@@ -168,9 +168,9 @@
                     aria-label="密码渠道">
                     <i class="fa fa-unlock"></i> 免费·获取
                 </a>
-                <a href="https://pay.ldxp.cn/shop/EMSDA9S1/olon3p" target="_blank" class="btn btn-primary" id="getPassword"
-                    aria-label="密码渠道">
-                    <i class="fa  fa-key"></i> 自购·获取
+                <a href="https://pay.ldxp.cn/shop/EMSDA9S1/olon3p" target="_blank" class="btn btn-green"
+                    id="getPassword" aria-label="密码渠道">
+                    <i class="fa fa-key"></i> 自购·优惠
                 </a>
                 <!-- <a href="javascript:;" class="btn btn-secondary" id="verifyOnline" aria-label="在线验证">
                     <i class="fa fa-check-circle"></i> 在线验证
@@ -178,9 +178,9 @@
                 <a href="javascript:;" class="btn btn-secondary" id="getKey" aria-label="密钥获取">
                     <i class="fa fa-unlock-alt "></i> 捐赠
                 </a>
-               <a href="javascript:;" class="btn btn-secondary" id="showInfo2" aria-label="显示说明">
-    <i class="fa fa-info-circle"></i> 说明
-</a>
+                <a href="javascript:;" class="btn btn-secondary" id="showInfo2" aria-label="显示说明">
+                    <i class="fa fa-info-circle"></i> 说明
+                </a>
             </div>
 
             <div class="hint">亲，因存滥用、新增验证，感谢理解，100%可用</div>
@@ -206,31 +206,32 @@
             <h2>帮助</h2>
             <div class="help-text">
                 遇到任何问题，可联系反馈<br>
-                <strong>官网：</strong><a href="https://360os.top" class="link" target="_blank" rel="noopener noreferrer">360os.top</a></br>
-               <strong> 本站：</strong><a href="https://tool.360os.top" class="link" target="_blank"
+                <strong>官网：</strong><a href="https://360os.top" class="link" target="_blank"
+                    rel="noopener noreferrer">360os.top</a></br>
+                <strong> 本站：</strong><a href="https://tool.360os.top" class="link" target="_blank"
                     rel="noopener noreferrer">tool.360os.top</a>
             </div>
 
             <div class="divider"></div>
 
             <div class="help-text">
-    <strong>工微（优先捐赠者）：</strong>wander-wechat
-</div>
-<div class="help-text">
-    远程协助：成功率100%；提供：不限速下载、刷机/解锁（可保资料）、ROOT/TWRP、救砖等支持
-</div>
+                <strong>工微（优先捐赠者）：</strong>wander-wechat
+            </div>
+            <div class="help-text">
+                远程协助：成功率100%；质保一年
+            </div>
 
-                <a href="https://www.360os.top/src/donation/" target="_blank" class="btn btn-secondary"
-                    id="humanVerification" aria-label="人机验证">
-                    <i class="fa fa-shield"></i> 人机验证
-                </a>
-                <a href="javascript:;" class="btn btn-secondary" id="humanService" aria-label="人工客服">
-                    <i class="fa fa-user"></i> 人工客服
-                </a>
-                <a href="https://sunlogin.oray.com/download?categ=personal" target="_blank" rel="noopener noreferrer"
-                    class="btn btn-secondary" id="remoteHelp" aria-label="向日葵远程">
-                    <i class="fa fa-desktop"></i> 向日葵远程
-                </a>
+            <a href="https://www.360os.top/src/donation/" target="_blank" class="btn btn-secondary"
+                id="humanVerification" aria-label="人机验证">
+                <i class="fa fa-shield"></i> 人机验证
+            </a>
+            <a href="javascript:;" class="btn btn-secondary" id="humanService" aria-label="人工客服">
+                <i class="fa fa-user"></i> 人工客服
+            </a>
+            <a href="https://sunlogin.oray.com/download?categ=personal" target="_blank" rel="noopener noreferrer"
+                class="btn btn-secondary" id="remoteHelp" aria-label="向日葵远程">
+                <i class="fa fa-desktop"></i> 向日葵远程
+            </a>
             </div>
         </section>
     </main>
@@ -280,25 +281,25 @@
             <p style="text-align: center; font-weight: bold;">21年~至今（稳定运行）</p>
             <h3>工具</h3>
             <div class="modal-body">
-                <p>1. 合理使用，不滥用</p>
+                <p>1. 请合理使用，不滥用</p>
                 <p>2. 已在官网下载，可忽视</p>
                 <p>3. 请详阅，相关文本或附件，对您很有帮助</p>
                 <p>4. 请尽量在，正版windows操作系统上使用</p>
             </div>
-             <h3>咨询（优先捐赠者）</h3>
-             <div class="modal-body">
+            <h3>咨询（优先捐赠者）</h3>
+            <div class="modal-body">
                 <p>1. 嫌繁琐，不会弄，请考虑远程协助，成功率100%</p>
                 <p>2. 无关，无意义、认知面差异大的，咨询，孰不回答</p>
             </div>
-             <h3>密码（多种渠道）</h3>
-             <div class="modal-body">
+            <h3>密码（多种渠道）</h3>
+            <div class="modal-body">
                 <p>1. 免费：免费任务，完后获取（多种形式，可联系）</p>
                 <p>2. 发卡：自购后，获取</p>
                 <p>3. 捐赠：捐赠后，获取</p>
                 <p>4. 其它：公众号、下载的资源等</p>
             </div>
             <h3>其它</h3>
-             <div class="modal-body">
+            <div class="modal-body">
                 <p>密码、远程协助支持，是两码事，按需选择</p>
             </div>
         </div>
@@ -319,13 +320,13 @@
     <script src="js/main.js"></script>
     <script>
         // 换码按钮切换二维码图片
-        (function() {
+        (function () {
             var btn = document.getElementById('changeCodeBtn');
             var img = document.getElementById('qrImage');
             var img1 = 'pic/fk.png';
             var img2 = 'pic/wx1.png';
             var showing1 = true;
-            btn.addEventListener('click', function() {
+            btn.addEventListener('click', function () {
                 if (showing1) {
                     img.src = img2;
                     showing1 = false;
@@ -336,7 +337,7 @@
             });
         })();
     </script>
-    
+
 </body>
 
 </html>
