--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         <!-- 密码区域 -->
         <section class="section">
             <h2>密码（多渠道/自取）</h2>
+            <div class="urgent-notice">
+    <strong style="color: red;">关于：因服务 器 即将停运；请尽快：获取+刷机</strong>
+</div>
             <div class="qr-center">
                 <div class="qr-container">
                     <img src="pic/fk.png" alt="在线密钥" class="qr-image" id="qrImage">
@@ -116,7 +119,7 @@
                 </a>
             </div>
 
-            <div class="hint">预防滥用；一步刷机，100%可用</div>
+            <div class="hint">100%可用，一步刷机</div>
 
             <button class="collapsible" id="passwordInstructions">
                 使用说明
