--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section class="section">
             <h2>密码（多渠道/自取）</h2>
             <div class="urgent-notice">
-    <strong style="color: red;">关于：因服务 器 即将停运；请尽快：获取+刷机</strong>
+    <strong style="color: red;">关于：因服务 器 即将停运；请尽快：获取+刷机；避免影响</strong>
 </div>
             <div class="qr-center">
                 <div class="qr-container">
