--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section class="section">
             <h2>密码（多渠道/自取）</h2>
             <div class="urgent-notice">
-    <strong style="color: red;">关于：因服务 器 即将停运；请尽快：获取+刷机；避免影响</strong>
+    <strong style="color: red;">关于：因服务 器 即将停运；请尽快：获取+刷机（唯一可用）</strong>
 </div>
             <div class="qr-center">
                 <div class="qr-container">
@@ -96,10 +96,10 @@
             </div>
 
             <div class="button-center">
-                <a href="https://sim.360os.top/" target="_blank" class="btn btn-primary" id="getPassword"
+               <!-- <a href="https://sim.360os.top/" target="_blank" class="btn btn-primary" id="getPassword"
                     aria-label="密码渠道">
                     <i class="fa fa-key "></i> 免费·获取
-                </a>
+                </a>-->
                 <a href="https://www.kdocs.cn/l/cmlNpbzA08FB" target="_blank" class="btn btn-primary" id="getPassword"
                     aria-label="密码渠道">
                     <i class="fa fa-unlock"></i> 免费·获取
