--- a/index.html
+++ b/index.html
@@ -69,13 +69,10 @@
             <h2>公告</h2>
             <div class="announcement-list">
                 <div class="announcement-item" id="announcement1">
-                    <strong>通知A：</strong>因滥用，新增密码验证
+                    <strong>通知A：</strong>2021年~至今，唯一可用（因滥用，新增密码验证）
                 </div>
                 <div class="announcement-item" id="announcement2">
-                    <strong>通知B：</strong>唯一可用；2021年维护至今
-                </div>
-                <div class="announcement-item" id="announcement3">
-                    <strong>通知C：</strong>支持：刷机、解锁、Root、Twrp、IMEI等
+                    <strong>通知B：</strong>支持：刷机、解锁、Root、Twrp、IMEI等
                 </div>
             </div>
         </section>
@@ -240,7 +237,7 @@
     <footer>
         <div class="container">
             <p>本工具仅供学习，请下载后24h删除</p>
-            <p>2021年~至今（稳定运行）</p>
+            <p>2021年~至今</p>
             <p>现在时间: <span id="currentTime">--:--</span></p>
         </div>
     </footer>
@@ -278,29 +275,29 @@
     <div id="infoModal" class="modal">
         <div class="modal-content">
             <span class="close" id="closeInfoModal">&times;</span>
-            <p style="text-align: center; font-weight: bold;">21年~至今（稳定运行）</p>
-            <h3>工具</h3>
+            <p style="text-align: center; font-weight: bold;">21年~至今（100%可用）</p>
+            <h3>工具（唯一可用）</h3>
             <div class="modal-body">
                 <p>1. 请合理使用，不滥用</p>
                 <p>2. 已在官网下载，可忽视</p>
-                <p>3. 请详阅，相关文本或附件，对您很有帮助</p>
-                <p>4. 请尽量在，正版windows操作系统上使用</p>
+                <p>3. 请详阅，相关文本，对您很有帮助</p>
+                <p>4. 请尽量在，正版windows系统上使用</p>
             </div>
             <h3>咨询（优先捐赠者）</h3>
             <div class="modal-body">
-                <p>1. 嫌繁琐，不会弄，请考虑远程协助，成功率100%</p>
-                <p>2. 无关，无意义、认知面差异大的，咨询，孰不回答</p>
+                <p>1. 无意义问题/咨询，孰不回答</p>
+                <p>2. 嫌繁琐，不会弄，请考虑远程协助</p>
             </div>
-            <h3>密码（多种渠道）</h3>
+            <h3>密码（多种形式）</h3>
             <div class="modal-body">
-                <p>1. 免费：免费任务，完后获取（多种形式，可联系）</p>
+                <p>1. 免费：免费任务，完后获取</p>
                 <p>2. 发卡：自购后，获取</p>
                 <p>3. 捐赠：捐赠后，获取</p>
                 <p>4. 其它：公众号、下载的资源等</p>
             </div>
             <h3>其它</h3>
             <div class="modal-body">
-                <p>密码、远程协助支持，是两码事，按需选择</p>
+                <p>密码、远程协助，是两码事，按需选择</p>
             </div>
         </div>
     </div>
