--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
             <h2>公告</h2>
             <div class="announcement-list">
                 <div class="announcement-item" id="announcement1">
-                    <strong>通知A：</strong>2021年~至今，唯一可用（因滥用，新增密码验证）
+                    <strong>通知A：</strong>2021年~至今，唯一可用
                 </div>
                 <div class="announcement-item" id="announcement2">
                     <strong>通知B：</strong>支持：刷机、解锁、Root、Twrp、IMEI等
+                </div>
+                <div class="announcement-item" id="announcement3">
+                    <strong>通知C：</strong>因滥用，新增密码验证
                 </div>
             </div>
         </section>
@@ -83,7 +86,7 @@
         <section class="section">
             <h2>密码（多渠道/自取）</h2>
             <div class="urgent-notice">
-    <strong style="color: red;">关于：因服务 器 即将停运；请尽快：获取+刷机（唯一可用）</strong>
+    <strong style="color: red;">关于：请尽快：获取+刷机（唯一可用）；可能 面临停运</strong>
 </div>
             <div class="qr-center">
                 <div class="qr-container">
@@ -116,7 +119,7 @@
                 </a>
             </div>
 
-            <div class="hint">100%可用，一步刷机</div>
+            <div class="hint">2021-至今 100%可用，一步刷机</div>
 
             <button class="collapsible" id="passwordInstructions">
                 使用说明
@@ -124,10 +127,9 @@
             </button>
             <div class="content" id="instructionsContent">
                 <ul style="margin: 15px; line-height: 1.8; list-style-position: inside;">
-                    <li>使用鼠标，点击确认，避免回车</li>
-                    <li>将获取的密码，输入 对应密码框 即可</li>
-                    <li>已选购，或捐赠者，可联系工微，免费咨询问题</li>
-                </ul>
+                    <li>鼠标，点击确认，避免回车</li>
+                    <li>将获取的密码，输入 对应密码框</li>
+                </ul> 
             </div>
             <button class="collapsible" id="passwordExplanation">
                 密码解释
@@ -204,9 +206,7 @@
             <div class="help-text">
                 遇到任何问题，可联系反馈<br>
                 <strong>官网：</strong><a href="https://360os.top" class="link" target="_blank"
-                    rel="noopener noreferrer">360os.top</a></br>
-                <strong> 本站：</strong><a href="https://tool.360os.top" class="link" target="_blank"
-                    rel="noopener noreferrer">tool.360os.top</a>
+                    rel="noopener noreferrer">360os.top</a>
             </div>
 
             <div class="divider"></div>
@@ -237,7 +237,6 @@
     <footer>
         <div class="container">
             <p>本工具仅供学习，请下载后24h删除</p>
-            <p>2021年~至今</p>
             <p>现在时间: <span id="currentTime">--:--</span></p>
         </div>
     </footer>
