--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section class="section">
             <h2>密码（多渠道/自取）</h2>
             <div class="urgent-notice">
-    <strong style="color: red;">关于：请尽快：获取+刷机（唯一可用）；可能 面临停运</strong>
+    <strong style="color: red;">关于：100%可用，一步刷机</strong>
 </div>
             <div class="qr-center">
                 <div class="qr-container">
@@ -119,7 +119,7 @@
                 </a>
             </div>
 
-            <div class="hint">2021-至今 100%可用，一步刷机</div>
+            <div class="hint">情怀提供 助力机友</div>
 
             <button class="collapsible" id="passwordInstructions">
                 使用说明
@@ -290,9 +290,9 @@
             <h3>密码（多种形式）</h3>
             <div class="modal-body">
                 <p>1. 免费：免费任务，完后获取</p>
-                <p>2. 发卡：自购后，获取</p>
+                <p>2. 自购：购买后，获取</p>
                 <p>3. 捐赠：捐赠后，获取</p>
-                <p>4. 其它：公众号、下载的资源等</p>
+                <p>4. 其它：见附件</p>
             </div>
             <h3>其它</h3>
             <div class="modal-body">
@@ -307,8 +307,8 @@
             <span class="close" id="closeServiceModal">&times;</span>
             <div class="modal-body" style="text-align: center;">
                 <img src="pic/wx-code.png" alt="二维码" style="max-width: 180px; margin: 10px auto;">
-                <p style="margin-top: 15px; font-weight: bold; color: red;">仅捐赠者 人机拒扰(加了白加)</p>
-                <p style="font-size: 13px; font-weight: bold; color: rgb(80, 80, 80);">注：简述事宜；无意义人群，孰不回读</p>
+                <p style="margin-top: 15px; font-weight: bold; color: red;">仅捐赠者 其它白加</p>
+                <p style="font-size: 13px; font-weight: bold; color: rgb(80, 80, 80);">注：先赞后问；简述事宜</p>
             </div>
         </div>
     </div>
