--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section class="section">
             <h2>密码（多渠道/自取）</h2>
             <div class="urgent-notice">
-    <strong style="color: red;">关于：100%可用，一步刷机</strong>
+    <strong style="color: red;">关于：</strong>情怀提供 维护至今；但时代变迁，该机人群，渐少；多方面，孰力不从心，可能......；各位：请尽快 获取
 </div>
             <div class="qr-center">
                 <div class="qr-container">
@@ -119,7 +119,7 @@
                 </a>
             </div>
 
-            <div class="hint">情怀提供 助力机友</div>
+            <div class="hint">100%可用，一步刷机</div>
 
             <button class="collapsible" id="passwordInstructions">
                 使用说明
@@ -215,7 +215,7 @@
                 <strong>工微（优先捐赠者）：</strong>wander-wechat
             </div>
             <div class="help-text">
-                远程协助：成功率100%；质保一年
+                远程协助：优质高效、成功率100%；质保一年
             </div>
 
             <a href="https://www.360os.top/src/donation/" target="_blank" class="btn btn-secondary"
