--- a/index.html
+++ b/index.html
@@ -67,13 +67,19 @@
         <!-- 公告区域 -->
         <section class="announcement">
             <h2>公告</h2>
+            <input type="hidden" id="announcementScroll" value="">
             <div class="announcement-list">
                 <div class="announcement-item" id="announcement1">
-                    <strong>通知A：</strong>2021年~至今，唯一可用
+                    <strong>致您：</strong>全网唯一可用，2021年~维护至今，助众机友</br>
+                    但现今，该机，趋向“0”群体；综考虑，停，所有服务（目前正常）</br>
+                    这些年，感谢大家的到访和信任，希望各位的360手机，能走过安稳时光</br>
+                    最后，江湖路远，有缘再见...</br>
+                    额。。。滥用与恶意打扰，增，密码验证；带来不便，实在抱歉！
                 </div>
-                <div class="announcement-item" id="announcement2">
+
+                <!--  <div class="announcement-item" id="announcement2">
                     <strong>通知B：</strong>因滥用，新增密码验证
-                </div>
+                </div>-->
             </div>
         </section>
 
@@ -81,9 +87,9 @@
 
         <!-- 密码区域 -->
         <section class="section">
-            <h2>密码（多渠道/自取）</h2>
+            <h2>密码（自取）</h2>
             <div class="urgent-notice">
-                <strong style="color: red;">更新时间：<span id="updateTime"></span></strong>
+                <strong style="color: red;">最后更新：<span id="updateTime"></span></strong>
             </div>
             <div class="qr-center">
                 <div class="qr-container">
@@ -93,23 +99,23 @@
             </div>
 
             <div class="button-center">
-                <a href="https://www.kdocs.cn/l/cmlNpbzA08FB" target="_blank" class="btn btn-secondary" id="getPassword"
+                <!--  <a href="https://www.kdocs.cn/l/cmlNpbzA08FB" target="_blank" class="btn btn-secondary" id="getPassword"
                     aria-label="密码渠道">
                     <i class="fa fa-unlock"></i> 免费·获取
-                </a>
+                </a>-->
                 <a href="https://pay.ldxp.cn/shop/EMSDA9S1/olon3p" target="_blank" class="btn btn-green"
                     id="getPasswordPay" aria-label="密码渠道">
-                    <i class="fa fa-bolt"></i> 极速·获取
+                    <i class="fa fa-bolt"></i> 密码·获取
                 </a>
-                <a href="javascript:;" class="btn btn-secondary" id="getKey" aria-label="密钥获取">
+                <!-- <a href="javascript:;" class="btn btn-secondary" id="getKey" aria-label="密钥获取">
                     <i class="fa fa-unlock-alt "></i> 捐赠
-                </a>
+                </a>-->
                 <a href="javascript:;" class="btn btn-secondary" id="showInfo2" aria-label="显示说明">
                     <i class="fa fa-info-circle"></i> 说明
                 </a>
             </div>
 
-            <div class="hint">获取密码 一步刷机 100%可用</div>
+            <div class="hint"> 100%可用 一步刷机</div>
 
             <button class="collapsible" id="Collapsible1">
                 使用说明
@@ -117,7 +123,7 @@
             </button>
             <div class="content">
                 <ul style="margin: 15px; line-height: 1.8; list-style-position: inside;">
-                    <li>鼠标，点击确认，避免回车</li>
+                    <li>鼠标，点击：确认</li>
                     <li>将获取的密码，输入 对应密码框</li>
                 </ul>
             </div>
@@ -208,7 +214,6 @@
                         <a href="javascript:;" class="btn btn-secondary" id="copyLink" aria-label="复制云盘链接">
                             <i class="fa fa-copy"></i> 复制
                         </a>
-                        <!-- 已将“说明”和“下载”按钮移至 刷机工具 (Collapsible3) -->
                     </div>
                 </div>
                 <div class="hint">注：如您已在官网下载，可忽视</div>
@@ -296,8 +301,7 @@
             </div>
             <h3>咨询（优先捐赠者）</h3>
             <div class="modal-body">
-                <p>1. 无意义问题/咨询，孰不回答</p>
-                <p>2. 嫌繁琐，不会弄，请考虑远程协助</p>
+                <p>1. 嫌繁琐，不会弄，请考虑远程协助</p>
             </div>
             <h3>密码（多种形式）</h3>
             <div class="modal-body">
