--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="announcement-item" id="announcement1">
                     <strong>致您：</strong>全网唯一可用，2021年~维护至今，助众机友</br>
                     但现今，该机，趋向“0”群体；综考虑，停，所有服务（目前正常）</br>
-                    这些年，感谢大家的到访和信任，希望各位的360手机，能走过安稳时光</br>
+                    这些年，感谢大家的到访和信任，希望各位的360手机，能继续发挥余热</br>
                     最后，江湖路远，有缘再见...</br>
                     额。。。滥用与恶意打扰，增，密码验证；带来不便，实在抱歉！
                 </div>
