--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
             <input type="hidden" id="announcementScroll" value="">
             <div class="announcement-list">
                 <div class="announcement-item" id="announcement1">
-                    <strong>致您：</strong>全网唯一可用，2021年~维护至今，助众机友</br>
-                    但现今，该机，趋向“0”群体；综考虑，停，所有服务（目前正常）</br>
-                    这些年，感谢大家的到访和信任，希望各位的360手机，能继续发挥余热</br>
-                    最后，江湖路远，有缘再见...</br>
-                    额。。。滥用与恶意打扰，增，密码验证；带来不便，实在抱歉！
+                    <strong>致众机友：</strong>全网唯一可用，2021年~维护至今</br>
+                    但现今，该机，趋向“0”群体；综考虑，关停（目前正常）</br>
+                    且用珍惜，江湖路远，有缘再见；带来不便，实在抱歉！
                 </div>
 
                 <!--  <div class="announcement-item" id="announcement2">
@@ -115,7 +113,7 @@
                 </a>
             </div>
 
-            <div class="hint"> 100%可用 一步刷机</div>
+            <div class="hint">100%可用 防止滥用</div>
 
             <button class="collapsible" id="Collapsible1">
                 使用说明
