--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
             </div>
             <div class="announcement-list">
                 <div class="announcement-item" id="announcement1">
-                    1.全网唯一可用，2021年~维护至今</br>
-                    2.因滥用，增设密码，请自行获取/使用</br>
-                    3.很忙，优回复，捐赠者；感谢理解</br>
+                    1.全网唯一可用</br>
+                    2.防止滥用，捐赠者，优先使用</br>
                 </div>
             </div>
         </section>
