--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <strong>工微（优先捐赠者）：</strong>wander-wechat
             </div>
             <div class="help-text">
-                支持：刷机、解锁、Root、Twrp、IMEI、位置穿越等
+                远程支持（可解决99%的问题）：刷机、解锁、Root、Twrp、IMEI、位置穿越等
             </div>
 
               <a href="https://www.360os.top/src/donation/" target="_blank" class="btn btn-secondary"
@@ -321,8 +321,8 @@
             <span class="close" id="closeServiceModal">&times;</span>
             <div class="modal-body" style="text-align: center;">
                 <img src="pic/wx-code.png" alt="二维码" style="max-width: 180px; margin: 10px auto;">
-                <p style="margin-top: 15px; font-weight: bold; color: red;">优先-捐赠者</p>
-                <p style="font-size: 13px; font-weight: bold; color: rgb(80, 80, 80);">注：简述事宜</p>
+                <p style="margin-top: 15px; font-weight: bold; color: red;">优先-捐赠者(恶意打扰，删)</p>
+                <p style="font-size: 13px; font-weight: bold; color: rgb(80, 80, 80);">注：不符勿扰；简述事宜</p>
             </div>
         </div>
     </div>
