--- a/index.html
+++ b/index.html
@@ -232,10 +232,11 @@
             <div class="divider"></div>
 
             <div class="help-text">
-                <strong>工微（优先捐赠者）：</strong>wander-wechat
+                 <strong>远程协助</strong>
             </div>
             <div class="help-text">
-                远程支持（可解决99%的问题）：刷机、解锁、Root、Twrp、IMEI、位置穿越等
+                工微（优先捐赠者）：wander-wechat</br>
+                解决99%的问题/支持：刷机、解锁、Root、Twrp、IMEI、位置穿越等</br>
             </div>
 
               <a href="https://www.360os.top/src/donation/" target="_blank" class="btn btn-secondary"
