--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-             <div class="hint">注：已在官网下载，可忽视</br>刷纯净系统 无任何广告 </div>
+             <div class="hint">注：已在官网下载，可忽视</br>Tips：迅雷注册，转存后，下载，速度更快</div>
         </section>
 
         <!-- 密码区域 -->
