--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-             <div class="hint">注：已在官网下载，可忽视</br>Tips：迅雷注册，转存后，下载，速度更快</div>
+             <div class="hint">注：已在官网下载，可忽视</br>Tips：迅雷浏览器，转存后，迅雷下载，飙快</div>
         </section>
 
         <!-- 密码区域 -->
