--- a/index.html
+++ b/index.html
@@ -167,14 +167,18 @@
             <div class="button-center">
                 <a href="https://pay.ldxp.cn/shop/EMSDA9S1/olon3p" target="_blank" class="btn btn-green"
                     id="getPasswordPay" aria-label="密码渠道">
-                    <i class="fa fa-bolt"></i> 密码·获取
+                    <i class="fa fa-bolt"></i> 密码渠道A
+                </a>
+                 <a href="https://www.trfaka.com/shop/LINCFQ92/91int8" target="_blank" class="btn btn-green"
+                    id="getPasswordPay" aria-label="密码渠道">
+                    <i class="fa fa-key "></i> 密码渠道B
                 </a>
                 <a href="https://www.kdocs.cn/l/cjoiPfvOmvgY" target="_blank"class="btn btn-secondary"  aria-label="帮助">
                     <i class="fa fa-info-circle"></i> 帮助
                 </a>
             </div>
 
-            <div class="hint">如需密码 自行获取 100%可用</div>
+            <div class="hint">自行获取 100%可用</div>
 
             <!-- 为使用说明按钮设定可通过 data-expanded 控制的默认值 -->
             <button class="collapsible" id="Collapsible1" data-expanded="false">
@@ -232,14 +236,14 @@
             <div class="divider"></div>
 
             <div class="help-text">
-                 <strong>远程协助：解决99%的问题</strong>
+                 <strong>人工（仅捐赠者）</strong>
             </div>
             <div class="help-text">
-                工微（仅捐赠者）：wander-wechat</br>
+                工微：wander-wechat</br>
                 支持：刷机、解锁、Root、Twrp、IMEI、位置穿越等</br>
             </div>
             <a href="javascript:;" class="btn btn-secondary" id="humanService" aria-label="人工客服">
-                <i class="fa fa-user"></i> 人工
+                <i class="fa fa-user"></i> 微信
             </a>
           
             <a href="https://sunlogin.oray.com/download?categ=personal" target="_blank" rel="noopener noreferrer"
