--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="announcement-item" id="announcement1">
                     1.全网唯一可用；2021-至今</br>
                     2.因恶意滥用，优先：捐赠者，使用</br>
-                    3.🪶情怀支持，但考虑到，该机，人群渐少，本站或停运；请尽快获取+下载
+                    3.🪶因该机，人群渐少，本站或停运；请尽快获取+下载
                 </div>
             </div>
         </section>
@@ -99,7 +99,7 @@
         <section class="section">
             <h2>刷机资源</h2>
             <!-- data-expanded 支持：设置为 "true" 将初始展开，"false" 为初始收起；若不设置，保持原有行为 -->
-            <button class="collapsible" id="Collapsible3" data-expanded="true">
+           <!-- <button class="collapsible" id="Collapsible3" data-expanded="true">
                 刷机工具
                 <i class="fa fa-chevron-down"></i>
             </button>
@@ -113,20 +113,12 @@
                             class="btn btn-green" id="toolDownload" aria-label="直接下载刷机工具">
                             <i class="fa fa-download"></i> 下载
                         </a>
-                        <a href="https://www.360os.top/src/webmp4/index.html" target="_blank" class="btn btn-secondary"
-                            aria-label="视频">
-                            <i class="fa fa-window-restore"></i> 刷机视频
-                        </a>
-                        <a href="javascript:;" class="btn btn-secondary" id="toolShowInfo" aria-label="说明">
-                            <i class="fa fa-info-circle"></i> 说明
-                        </a>
-
                     </div>
                 </div>
                 
-            </div>
+            </div> -->
 
-            <button class="collapsible" id="Collapsible4" data-expanded="false">
+            <button class="collapsible" id="Collapsible4" data-expanded="true">
                 刷机包
                 <i class="fa fa-chevron-down"></i>
             </button>
@@ -141,21 +133,28 @@
                         <input type="text" id="extractCode" value="提取码：m8ef" placeholder="提取码" readonly>
                     </div>
                     <div class="button-group">
-                        <a href="javascript:;" class="btn btn-secondary" id="openLink" aria-label="打开云盘链接">
+                        <a href="javascript:;" class="btn btn-secondary" id="openLink" aria-label="打开">
                             <i class="fa fa-window-restore"></i> 打开
                         </a>
-                        <a href="javascript:;" class="btn btn-secondary" id="copyLink" aria-label="复制云盘链接">
+                        <a href="javascript:;" class="btn btn-secondary" id="copyLink" aria-label="复制">
                             <i class="fa fa-copy"></i> 复制
+                        </a>
+                        <a href="https://www.360os.top/src/webmp4/index.html" target="_blank" class="btn btn-secondary"
+                            aria-label="视频">
+                            <i class="fa fa-window-restore"></i> 刷机视频
+                        </a>
+                        <a href="javascript:;" class="btn btn-secondary" id="toolShowInfo" aria-label="说明">
+                            <i class="fa fa-info-circle"></i> 说明
                         </a>
                     </div>
                 </div>
             </div>
-             <div class="hint">注：已在官网下载，可忽视</br>Tips：迅雷浏览器，转存后，迅雷下载，飙快</div>
+             <div class="hint">注：压缩包格式，请解压后使用</div>
         </section>
 
         <!-- 密码区域 -->
         <section class="section">
-            <h2>密码（自动发）</h2>
+            <h2>密钥（自动发-任选）</h2>
 
             <div class="qr-center">
                 <div class="qr-container">
@@ -167,20 +166,20 @@
             <div class="button-center">
                 <a href="https://pay.ldxp.cn/shop/EMSDA9S1/olon3p" target="_blank" class="btn btn-green"
                     id="getPasswordPay" aria-label="密码渠道">
-                    <i class="fa fa-bolt"></i> 密码渠道A
+                    <i class="fa fa-bolt"></i> 主密码✔
                 </a>
                  <a href="https://www.trfaka.com/shop/LINCFQ92/91int8" target="_blank" class="btn btn-green"
                     id="getPasswordPay" aria-label="密码渠道">
-                    <i class="fa fa-key "></i> 密码渠道B
+                    <i class="fa fa-key "></i> 备密码
                 </a>
                 <a href="https://www.kdocs.cn/l/cjoiPfvOmvgY" target="_blank"class="btn btn-secondary"  aria-label="帮助">
                     <i class="fa fa-info-circle"></i> 帮助
                 </a>
             </div>
 
-            <div class="hint">自行获取 100%可用</div>
+            <div class="hint">自行获取 均可使用</div>
 
-            <!-- 为使用说明按钮设定可通过 data-expanded 控制的默认值 -->
+            <!-- 为使用说明按钮设定可通过 data-expanded 控制的默认值 
             <button class="collapsible" id="Collapsible1" data-expanded="false">
                 使用说明
                 <i class="fa fa-chevron-down"></i>
@@ -189,7 +188,7 @@
                 <ul style="margin: 15px; line-height: 1.8; list-style-position: inside;">
                     <li>将获取的密码，输入 对应密码框</li>
                 </ul>
-            </div>
+            </div>-->
               <!--<button class="collapsible" id="Collapsible2">
                 密码解释
                 <i class="fa fa-chevron-down"></i>
@@ -303,7 +302,7 @@
             </div>
             <h3>咨询（优先捐赠者）</h3>
             <div class="modal-body">
-                <p>1. 嫌繁琐，不会弄，请考虑远程协助</p>
+                <p>1. 不会弄，请考虑远程协助</p>
             </div>
             <h3>密码（多种渠道获取）</h3>
             <div class="modal-body">
@@ -321,8 +320,8 @@
             <span class="close" id="closeServiceModal">&times;</span>
             <div class="modal-body" style="text-align: center;">
                 <img src="pic/wp.png" alt="二维码" style="max-width: 280px; margin: 10px auto; height: auto;">
-                <p style="margin-top: 15px; font-weight: bold; color: red;">仅回复：捐赠者</p>
-                <p style="font-size: 13px; font-weight: bold; color: rgb(80, 80, 80);">不符勿扰；一概无视/删</p>
+                <p style="margin-top: 15px; font-weight: bold; color: red;">仅回复：捐赠者（含购）</p>
+                <p style="font-size: 13px; font-weight: bold; color: rgb(80, 80, 80);">...</p>
             </div>
         </div>
     </div>
